k8s/templates/cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-example
  labels:
    run: cluster-example
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: cluster-example
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-example-discovery
  labels:
    run: cluster-example
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: cluster-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-example
spec:
  selector:
    matchLabels:
      run: cluster-example
  replicas: 3
  template:
    metadata:
      labels:
        run: cluster-example
    spec:
      containers:
      - name: cluster-example
        image: cluster1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
