k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "cluster-example.internal"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cluster-example
            port:
              number: 80
